--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" />
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/fav.png" />
   <title>Odin Tools</title>
 </head>
-
 <body>
   <div id="root">
   </div>
